sw/qa/extras/uiwriter/uiwriter11.cxx
@@ -1,0 +1,72 @@
+/* -*- Mode: C++; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*- */
+/*
+ * This file is part of the LibreOffice project.
+ *
+ * This Source Code Form is subject to the terms of the Mozilla Public
+ * License, v. 2.0. If a copy of the MPL was not distributed with this
+ * file, You can obtain one at http://mozilla.org/MPL/2.0/.
+ */
+
+#include <swmodeltestbase.hxx>
+#include <vcl/scheduler.hxx>
+
+#include <comphelper/propertyvalue.hxx>
+#include <comphelper/sequence.hxx>
+#include <comphelper/scopeguard.hxx>
+#include <comphelper/configuration.hxx>
+
+#include <edtwin.hxx>
+#include <view.hxx>
+#include <wrtsh.hxx>
+#include <unotxdoc.hxx>
+#include <ndtxt.hxx>
+#include <IDocumentLayoutAccess.hxx>
+#include <svx/svxids.hrc>
+
+namespace
+{
+class SwUiWriterTest11 : public SwModelTestBase
+{
+public:
+    SwUiWriterTest11()
+        : SwModelTestBase(u"/sw/qa/extras/uiwriter/data/"_ustr)
+    {
+    }
+};
+
+CPPUNIT_TEST_FIXTURE(SwUiWriterTest11, testTdf167760_numberedPara)
+{
+    createSwDoc("tdf167760_numberedPara.odt");
+
+    CPPUNIT_ASSERT_EQUAL(OUString("1.1."),
+                         getProperty<OUString>(getParagraph(1), "ListLabelString"));
+
+    // apply a non-numbered style to paragraph 1
+    dispatchCommand(mxComponent, u".uno:StyleApply"_ustr,
+                    { comphelper::makePropertyValue(u"FamilyName"_ustr, u"ParagraphStyles"_ustr),
+                      comphelper::makePropertyValue(u"Style"_ustr, u"Text body"_ustr) });
+    // the numbering should not be affected by changing a paragraph style
+    CPPUNIT_ASSERT_EQUAL(OUString("1.1."),
+                         getProperty<OUString>(getParagraph(1), "ListLabelString"));
+
+    // apply a numbered style
+    dispatchCommand(mxComponent, u".uno:StyleApply"_ustr,
+                    { comphelper::makePropertyValue(u"FamilyName"_ustr, u"ParagraphStyles"_ustr),
+                      comphelper::makePropertyValue(u"Style"_ustr, u"aList"_ustr) });
+    // the numbering should be changed to that specified by the paragraph style
+    CPPUNIT_ASSERT_EQUAL(OUString("i.I.a)"),
+                         getProperty<OUString>(getParagraph(1), "ListLabelString"));
+
+    // apply the non-numbered style while holding down the Ctrl-key
+    dispatchCommand(mxComponent, u".uno:StyleApply"_ustr,
+                    { comphelper::makePropertyValue(u"FamilyName"_ustr, u"ParagraphStyles"_ustr),
+                      comphelper::makePropertyValue(u"Style"_ustr, u"Text body"_ustr),
+                      comphelper::makePropertyValue(u"KeyModifier"_ustr, uno::Any(KEY_MOD1)) });
+    // the numbering should be removed when the Ctrl-key is held down
+    CPPUNIT_ASSERT_EQUAL(OUString(), getProperty<OUString>(getParagraph(1), "ListLabelString"));
+}
+
+} // end of anonymous namespace
+CPPUNIT_PLUGIN_IMPLEMENT();
+
+/* vim:set shiftwidth=4 softtabstop=4 expandtab: */
